--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="split">
                 <div class='id'>#</div> 
                 <div class='name'>Task</div>  
-                <div class='duration'>Time Taken</div>
+                <div class='duration'>Time</div>
                 <div class='timestamp'>Timestamp</div>
             </div>
         </div>
