--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Split Me</title>
+    <title>Split</title>
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="icon" href="icon.png">
 </head>
 <body>
     <div class="content">
-        <h1><span id="heading">Split Me</span></h1>
+        <h1><span id="heading">Split</span></h1>
 
         <div class="controls">
             <button id="start">Start Session 🔥</button>
