--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <h1><span id="heading">Split</span></h1>
 
         <div class="controls">
-            <button id="start">Start Session 🔥</button>
-            <input id='task' type="text" placeholder="Task name">
-            <button id="split">Split ⏱️</button>
-            <button id="break">Break 🏖️</button>
+            <button id="start">Start Work Session <b>🚀</b></button>
+            <input id='task' type="text" placeholder="Item name">
+            <button id="split">Split <b>⏱️</b></button>
+            <button id="complete">Work <b>✔️</b></button>
+            <button id="break">Break <b>🏖️</b></button>
         </div>
         <div id="splits" class="splits">
             <div class="split">
