--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
 
         <div class="controls">
             <button id="start">Start Work Session <b>🚀</b></button>
-            <input id='task' type="text" placeholder="Item name">
-            <button id="split">Split <b>⏱️</b></button>
-            <button id="complete">Work <b>✔️</b></button>
-            <button id="break">Break <b>🏖️</b></button>
+            <input id='task' type="text" placeholder="Item name" disabled>
+            <button id="split" disabled>Split</button>
+            <select name="type" id="type" disabled></select>
         </div>
         <div id="splits" class="splits">
             <div class="split">
-                <div class='id'>#</div> 
-                <div class='name'>Task</div>  
+                <!-- <div class='id'>#</div>  -->
+                <div class='name'>Item</div>  
                 <div class='duration'>Time</div>
                 <div class='timestamp'>Timestamp</div>
             </div>
