--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class='timestamp'>Timestamp</div>
             </div>
         </div>
+        <div id="stats" class="stats"></div>
     </div>
     
     <footer>
