--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
     <footer>
         <p>Copyright &copy; 2025 Max Leeming</p>
     </footer>
-    <script src="split.js"></script>
+
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/variables.js"></script>
+
+    <script src="scripts/split.js"></script>
+    <script src="scripts/edit.js"></script>
+    <script src="scripts/controls.js"></script>
+    <script src="scripts/stats.js"></script>
+
+    <script src="scripts/splitMaster.js"></script>
 </body>
 </html>
