--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div>
                         <label for="editSplit__select">Category: </label>
-                        <select name="" id="editSplit__select"></select>
+                        <select name="editSplit__select" id="editSplit__select"></select>
                     </div>
                 </div>
                 <div class="editSplit__buttons">
@@ -35,7 +35,7 @@
 
         <div class="controls">
             <button id="start"><b>🚀</b> Start Session</button>
-            <input id='task' type="text" placeholder="Item name" disabled>
+            <input id='task' type="text" placeholder="Item name..." disabled>
             <button id="split" disabled>Split</button>
             <select name="type" id="type" disabled></select>
             <button id="end" disabled><b>🏁</b> End</button>
